--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,233 @@
-torch==2.1.1+cu118
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+altair==5.5.0
+altgraph==0.17.4
+anaconda-anon-usage @ file:///croot/anaconda-anon-usage_1732732445543/work
+annotated-types @ file:///croot/annotated-types_1709542908624/work
+anyio==4.9.0
+arabic-reshaper==3.0.0
+archspec @ file:///croot/archspec_1709217642129/work
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+async-lru==2.0.5
+attrs==25.3.0
+auto-mix-prep==0.2.0
+babel==2.17.0
+backcall==0.2.0
+beautifulsoup4==4.13.3
+bleach==6.2.0
+blinker==1.9.0
+boltons @ file:///croot/boltons_1737061692168/work
+boto3==1.34.69
+botocore==1.34.162
+branca==0.8.1
+Brotli @ file:///croot/brotli-split_1736182456865/work
+cachetools==6.1.0
+certifi @ file:///croot/certifi_1738623731865/work/certifi
+cffi @ file:///croot/cffi_1736182485317/work
+charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
+click==8.1.8
+colorama==0.4.6
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
+conda @ file:///croot/conda_1738168370816/work
+conda-anaconda-telemetry @ file:///croot/conda-anaconda-telemetry_1736524596117/work
+conda-anaconda-tos @ file:///croot/conda-anaconda-tos_1739298990519/work
+conda-content-trust @ file:///croot/conda-content-trust_1714483159009/work
+conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1737733694612/work/src
+conda-package-handling @ file:///croot/conda-package-handling_1731369017509/work
+conda_package_streaming @ file:///croot/conda-package-streaming_1731366181659/work
+contourpy==1.3.1
+cryptography @ file:///croot/cryptography_1732129644106/work
+cycler==0.12.1
+debugpy @ file:///croot/debugpy_1736267418885/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
+defusedxml==0.7.1
+distro @ file:///croot/distro_1714488253808/work
+docopt==0.6.2
+et_xmlfile==2.0.0
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1733569351617/work
+fastjsonschema==2.21.1
+filelock==3.18.0
+folium==0.15.1
+fonttools==4.57.0
+fqdn==1.5.1
+frozendict @ file:///croot/frozendict_1713194832637/work
+frozenlist==1.6.0
+fsspec==2025.7.0
+geographiclib==2.0
+geopandas==1.0.1
+geopy==2.4.1
+gitdb==4.0.12
+GitPython==3.1.44
+greenlet==3.2.3
+h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
+idna @ file:///croot/idna_1714398848350/work
+igraph==0.11.8
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1737420181517/work
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1719845459717/work
+ipyleaflet==0.19.2
+ipython==8.12.3
+ipython_pygments_lexers @ file:///home/conda/feedstock_root/build_artifacts/ipython_pygments_lexers_1737123620466/work
+ipywidgets==8.1.6
+isoduration==20.11.0
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
+Jinja2==3.1.6
+jmespath==1.0.1
+joblib==1.5.0
+json5==0.12.0
+jsonpatch @ file:///croot/jsonpatch_1714483231291/work
+jsonpointer==2.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-events==0.12.0
+jupyter-leaflet==0.19.2
+jupyter-lsp==2.2.5
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.0
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.14
+kiwisolver==1.4.8
+libmambapy @ file:///croot/mamba-split_1734469461757/work/libmambapy
+mappymatch==0.6.0
+markdown-it-py @ file:///work/perseverance-python-buildout/croot/markdown-it-py_1698846045803/work
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
+mdurl @ file:///work/perseverance-python-buildout/croot/mdurl_1698845653285/work
+menuinst @ file:///croot/menuinst_1738943416351/work
+mistune==3.1.3
+mpmath==1.3.0
+multidict==6.4.3
+narwhals==1.46.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+networkx==3.2.1
+notebook==7.4.0
+notebook_shim==0.2.4
+numpy==2.2.4
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+openpyxl==3.1.5
+osmnx==2.0.3
+overrides==7.7.0
+packaging @ file:///croot/packaging_1734472117206/work
+pandas==2.2.3
+pandocfilters==1.5.1
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
+pigar==2.1.7
+pillow==11.2.1
+pipreqs==0.5.0
+platformdirs @ file:///work/perseverance-python-buildout/croot/platformdirs_1701732573265/work
+pluggy @ file:///croot/pluggy_1733169602837/work
+polyline==2.0.2
+prometheus_client==0.21.1
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1737453357274/work
+propcache==0.3.1
+protobuf==6.31.1
+psutil @ file:///croot/psutil_1736367091698/work
+psycopg2-binary==2.9.10
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
+pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+pyarrow==19.0.1
+pycosat @ file:///croot/pycosat_1736868416091/work
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pydantic==2.11.5
+pydantic_core==2.33.2
+pydeck==0.9.1
+pydub==0.25.1
+Pygments @ file:///work/perseverance-python-buildout/croot/pygments_1698846270603/work
+pyinstaller==6.14.2
+pyinstaller-hooks-contrib==2025.5
+pyogrio==0.11.0
+pyparsing==3.2.3
+pyproj==3.7.1
+PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
+python-bidi==0.6.6
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
+python-json-logger==3.3.0
+pytz==2025.2
+PyYAML==6.0.2
+pyzmq @ file:///croot/pyzmq_1734687138743/work
+redis==5.2.1
+referencing==0.36.2
+reportlab==4.4.2
+requests @ file:///croot/requests_1730999120400/work
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich @ file:///croot/rich_1732638981168/work
+rpds-py==0.24.0
+rtree==1.4.0
+ruamel.yaml @ file:///croot/ruamel.yaml_1727980156079/work
+ruamel.yaml.clib @ file:///croot/ruamel.yaml.clib_1727769819935/work
+s3transfer==0.10.4
+scikit-learn==1.6.1
+scipy==1.15.3
+seaborn==0.13.2
+Send2Trash==1.8.3
+setuptools==75.8.0
+shapely==2.1.1
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.41
+stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
+streamlit==1.46.1
+sympy==1.14.0
+tenacity==9.1.2
+terminado==0.18.1
+texttable==1.7.0
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+toml==0.10.2
+torch==2.7.1
+tornado @ file:///croot/tornado_1733960490606/work
+tqdm==4.66.1
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
+traittypes==0.2.1
+triton==3.3.1
+truststore @ file:///croot/truststore_1736550121485/work
+types-python-dateutil==2.9.0.20241206
+typing-inspection==0.4.1
+typing_extensions @ file:///croot/typing_extensions_1734714854207/work
+tzdata==2025.2
+uri-template==1.3.0
+urllib3 @ file:///croot/urllib3_1737133630106/work
+watchdog==6.0.0
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+wheel==0.45.1
+widgetsnbextension==4.0.14
+xyzservices==2025.1.0
+yarg==0.1.9
+yarl==1.20.0
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+zstandard @ file:///croot/zstandard_1731356346222/work
